Blocking transactions need to unblock properly